# AltmarketsCoin

./: .gitignore  .travis.yml  Altmarkets-qt.pro  CHANGELOG.md  INSTALL  Makefile.am  README.md  configure.ac  libAltmarketsconsensus.pc.in
contrib/: README.md  altmarkets-qt.pro  altmarketsd.bash-completion  gitian-build.py  gitian-build.sh  qt_translations.py  tidy_datadir.sh
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  (+12 more)
src/: Altmarkets-cli-res.aps  Altmarkets-cli-res.rc  Altmarkets-cli.cpp  Altmarkets-tx.cpp  Altmarketsd-res.aps  Altmarketsd-res.rc  Altmarketsd.cpp  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bignum.h  bip39.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  eccryptoverify.h  ecwrapper.cpp  ecwrapper.h  hash.h  (+58 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/dns/: dns.cpp  dns.h  seqdns.cpp  seqdns.h
src/leveldb/: LICENSE
src/leveldb/db/: corruption_test.cc  db_impl.cc  db_impl.h  db_iter.cc  db_iter.h  db_test.cc  dbformat.cc  dbformat.h  dbformat_test.cc  dumpfile.cc  memtable.cc  memtable.h  recovery_test.cc  repair.cc  snapshot.h  version_edit.cc  version_edit.h  version_edit_test.cc  version_set.cc  version_set.h  version_set_test.cc  write_batch.cc  write_batch_internal.h  write_batch_test.cc
src/leveldb/doc/: impl.md  index.md  log_format.md  table_format.md
src/leveldb/doc/bench/: db_bench_sqlite3.cc  db_bench_tree_db.cc
src/leveldb/include/leveldb/: dumpfile.h  iterator.h  options.h
src/leveldb/port/: port_win.cc  port_win.h
src/leveldb/table/: filter_block.h  table_builder.cc  table_test.cc  two_level_iterator.h
src/leveldb/util/: bloom.cc  env_win.cc
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Altmarkets.cpp  Altmarkets.qrc  Altmarkets_locale.qrc  Altmarketsaddressvalidator.cpp  Altmarketsaddressvalidator.h  Altmarketsamountfield.cpp  Altmarketsamountfield.h  Altmarketsgui.cpp  Altmarketsgui.h  Altmarketsstrings.cpp  Altmarketsunits.cpp  Altmarketsunits.h  Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  dnspage.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  nametablemodel.cpp  networkstyle.cpp  networkstyle.h  (+54 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  dnspage.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: Altmarkets_ach.ts  Altmarkets_af_ZA.ts  Altmarkets_ar.ts  Altmarkets_be_BY.ts  Altmarkets_bg.ts  Altmarkets_bs.ts  Altmarkets_ca.ts  Altmarkets_ca@valencia.ts  Altmarkets_ca_ES.ts  Altmarkets_cmn.ts  Altmarkets_cs.ts  Altmarkets_cy.ts  Altmarkets_da.ts  Altmarkets_de.ts  Altmarkets_el_GR.ts  Altmarkets_en.ts  Altmarkets_eo.ts  Altmarkets_es.ts  Altmarkets_es_CL.ts  Altmarkets_es_DO.ts  Altmarkets_es_MX.ts  Altmarkets_es_UY.ts  Altmarkets_et.ts  Altmarkets_eu_ES.ts  Altmarkets_fa.ts  Altmarkets_fa_IR.ts  Altmarkets_fi.ts  Altmarkets_fr.ts  Altmarkets_fr_CA.ts  Altmarkets_gl.ts  Altmarkets_gu_IN.ts  Altmarkets_he.ts  Altmarkets_hi_IN.ts  Altmarkets_hr.ts  Altmarkets_hu.ts  Altmarkets_id_ID.ts  Altmarkets_it.ts  Altmarkets_ja.ts  Altmarkets_ka.ts  Altmarkets_kk_KZ.ts  (+31 more)
src/qt/res/: Altmarkets-qt-res.rc
src/qt/res/css/: silver.css
src/qt/res/icons/: Altmarkets.icns
src/qt/test/: Makefile  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcprotocol.h  rpcrawtransaction.cpp  rpcregister.h  rpcserver.cpp  rpcserver.h
src/rpc/tests/: rpc_tests.cpp  rpc_wallet_tests.cpp
src/script/: Altmarketsconsensus.cpp  Altmarketsconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/: eckey_impl.h  testrand.h
src/secp256k1/src/java/: org_sequence_NativeSecp256k1.c  org_sequence_NativeSecp256k1.h
src/secp256k1/src/java/org/Altmarkets/: NativeSecp256k1.java
src/support/: lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Altmarkets-util-test.py  Makefile  README.md  alert_tests.cpp  allocator_tests.cpp  base58_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  reverselock_tests.cpp  script_tests.cpp  sighash_tests.cpp  test_Altmarkets.cpp  transaction_tests.cpp  univalue_tests.cpp
src/test/data/: Altmarkets-util-test.json  README.md  script_invalid.json  script_valid.json  tx_invalid.json  tx_valid.json
src/univalue/lib/: univalue_utffilter.h
src/wallet/: coincontrol.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  wallet_tests.cpp
(+105 files in other folders)
